# fyp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
client/: package-lock.json  package.json  pnpm-lock.yaml
client/app/: globals.css  layout.tsx  page.tsx  providers.tsx  theme.ts
client/app/api/: mediaroot-server-api.tsx
client/app/components/audio-player/: album-art.tsx  audio-player.tsx
client/app/components/dashboard/: add-media-dialog.tsx  delete-media-dialog.tsx  edit-media-dialog.tsx  media-card.tsx  media-list.tsx  options.tsx  search.tsx  side-menu.tsx  spinner.tsx
client/app/components/image-viewer/: image-viewer.tsx
client/app/components/video-player/: video-player.tsx
client/app/hooks/: useCreateMedia.ts  useDeleteMedia.ts  useMedia.ts  useUpdateMediaTitle.ts
client/app/lib/: utils.ts
client/app/listen/[id]/: page.tsx
client/app/types/: index.ts
client/app/view/[id]/: page.tsx
client/app/watch/[id]/: page.tsx
server/: .gitignore  CMakeLists.txt  main.cpp
server/hls_audio_cache/11/: playlist.m3u8  segment0000.ts  segment0001.ts  segment0002.ts  segment0003.ts  segment0004.ts  segment0005.ts  segment0006.ts  segment0007.ts  segment0008.ts  segment0009.ts
server/hls_audio_cache/8/: playlist.m3u8  segment0000.ts  segment0001.ts  segment0002.ts  segment0003.ts  segment0004.ts  segment0005.ts  segment0006.ts  segment0007.ts  segment0008.ts  segment0009.ts  segment0010.ts  segment0011.ts  segment0012.ts  segment0013.ts  segment0014.ts  segment0015.ts  segment0016.ts
website/: index.html
